Fix z-index for copy repo link buttons to be clickable

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,5 @@
 #particles-js {
   background-color: #242629;
+
+  z-index: -1000;
 }
